select arrival and departure flights